--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p> RULES: </p>
         <p> 
           A frog can only move in the direction it is facing. </br>
-          A frog can step into the empty space if it is adjacent. </br>
+          A frog can hop into the empty space directly in front of it. </br>
           A frog can jump over another frog into the empty space on the other side.
         </p>      
       </div>
